# haskell-gsasl

./: gsasl.cabal  hsgsasl-shim.c
Network/Protocol/SASL/: GNU.hs  GSASL.chs
cbits/: hsgsasl-shim.c
lib/Network/Protocol/SASL/: GNU.hs
