name: gsasl
version: 0.3
stability: Alpha
synopsis: Bindings for GNU SASL
license: GPL-3
license-file: License.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.2
category: Network

library
  build-depends:
      base >=3 && < 5
    , transformers >= 0.2 && < 0.3
    , bytestring >= 0.9 && < 0.10

  exposed-modules: Network.Protocol.SASL.GNU

  extra-libraries: gsasl
  pkgconfig-depends: libgsasl
  c-sources: hsgsasl-shim.c
